// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CollapsiblePanelHeader/> custom properties 1`] = `
<div
  className="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
  id="test-id"
  onClick={[MockFunction]}
>
  <span
    className="domain-panel-status-icon domain-panel-status-icon-green"
  >
    <span
      className="fa fa-check-circle"
    />
  </span>
  <span
    className="domain-panel-title"
  >
    Test Prefix - Test Title
  </span>
  <span
    className="pull-right"
  >
    <span
      className="fa fa-lg fa-plus-square domain-form-expand-btn"
    />
  </span>
  <span
    className="domain-panel-header-fields-defined"
  >
    N Fields
  </span>
</div>
`;

exports[`<CollapsiblePanelHeader/> default properties 1`] = `
<div
  className="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
  id="test-id"
  onClick={[MockFunction]}
>
  <span
    className="domain-panel-title"
  >
    Test Title
  </span>
  <span
    className="pull-right"
  >
    <span
      className="fa fa-lg fa-plus-square domain-form-expand-btn"
    />
  </span>
</div>
`;

exports[`<CollapsiblePanelHeader/> invalid, iconHelpMsg, and expanded 1`] = `
<div
  className="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
  id="test-id"
  onClick={[MockFunction]}
>
  <span
    className="domain-panel-status-icon"
  >
    <span
      className="fa fa-check-circle"
    />
  </span>
  <span
    className="domain-panel-title"
  >
    Test Title
  </span>
  <span
    className="pull-right"
  >
    <span
      className="fa fa-lg fa-minus-square domain-form-collapse-btn"
    />
  </span>
</div>
`;

exports[`<CollapsiblePanelHeader/> not collapsible 1`] = `
<div
  className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
  id="test-id"
  onClick={[MockFunction]}
>
  <span
    className="domain-panel-title"
  >
    Test Title
  </span>
</div>
`;

exports[`<CollapsiblePanelHeader/> not controlledCollapse 1`] = `
<div
  className="domain-panel-header domain-panel-header-collapsed"
  id="test-id"
  onClick={[MockFunction]}
>
  <span
    className="domain-panel-status-icon domain-panel-status-icon-green"
  >
    <span
      className="fa fa-check-circle"
    />
  </span>
  <span
    className="domain-panel-title"
  >
    Test Title
  </span>
</div>
`;

exports[`<CollapsiblePanelHeader/> panelStatus TODO and help tip 1`] = `
<div
  className="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
  id="test-id"
  onClick={[MockFunction]}
>
  <span
    className="label-help-target"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="domain-panel-status-icon domain-panel-status-icon-blue"
    >
      <span
        className="fa fa-exclamation-circle"
      />
    </span>
  </span>
  <span
    className="domain-panel-title"
  >
    Test Title
  </span>
  <span
    className="pull-right"
  >
    <span
      className="fa fa-lg fa-plus-square domain-form-expand-btn"
    />
  </span>
  <span
    className="label-help-target"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="label-help-icon fa fa-question-circle"
    />
  </span>
</div>
`;
